fixed alignment issue on laptops

--- a/src/App.scss
+++ b/src/App.scss
@@ -376,10 +376,10 @@ input{
   #star{
     width: .75rem;
   }
-  #recs{
-    display: inline-grid;
-    justify-content: center;
-  }
+  // #recs{
+  //   display: inline-grid;
+  //   justify-content: center;
+  // }
   
   #recposter{
     width: 8em;
